k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kubewatch-service
  labels:
    app: kubewatch

spec:
  selector:
    app: kubewatch

  ports:
    - name: http
      port: 8000
      targetPort: 8000

  type: NodePort
